[gd_scene load_steps=11 format=3 uid="uid://dd8ep7ep4353"]

[ext_resource type="Script" path="res://scenes/gui/components/port_view.gd" id="1_wbnxq"]
[ext_resource type="LabelSettings" uid="uid://5j47d8xfvkoj" path="res://assets/fonts/style_number_small.tres" id="3_p0cf8"]
[ext_resource type="FontFile" uid="uid://byjdovawflxyj" path="res://assets/fonts/BENDER.OTF" id="3_rjs01"]
[ext_resource type="FontFile" uid="uid://ddjm3jbnq4wxq" path="res://assets/fonts/Font Awesome 6 Free-Solid-900.otf" id="5_fayy5"]

[sub_resource type="GDScript" id="GDScript_4hd83"]
script/source = "extends Label


func set_value(amount: int):
	if amount > 999999:
		text = \"%.1fM\" % (amount / 1000000.0)
	elif amount > 999:
		text = \"%.1fK\" % (amount / 1000.0)
	else:
		text = str(amount)
"

[sub_resource type="LabelSettings" id="LabelSettings_irrqv"]
font = ExtResource("3_rjs01")
font_color = Color(0.203796, 0.870852, 0.966146, 1)

[sub_resource type="GDScript" id="GDScript_4nfwf"]
script/source = "extends VBoxContainer

func update_view(port: OutpostDM.Port):
	match port.get_mode():
		OutpostDM.TradeMode.Storage:
			$PortMode.text = \"仓储\"
			$AmountView/Label.text = \"数量设置\"
			%SettingAmount.editable = false
			%SettingAmount.text = \"\"
		OutpostDM.TradeMode.Request:
			$PortMode.text = \"需求\"
			$AmountView/Label.text = \"最大订购\"
			update_cfg_amount(port.setting_amount)
			%SettingAmount.editable = true
		OutpostDM.TradeMode.Supply:
			$PortMode.text = \"供给\"
			update_cfg_amount(port.setting_amount)
			$AmountView/Label.text = \"数量设置\"
			%SettingAmount.editable = false
			%SettingAmount.text = \"\"

func update_cfg_amount(amount: int):
	%SettingAmount.text = str(amount)
"

[sub_resource type="GDScript" id="GDScript_1q7ur"]
script/source = "extends Button


func update_view(mode: OutpostDM.TradeMode):
	match mode:
		OutpostDM.TradeMode.Storage:
			text = \"仓储\"
		OutpostDM.TradeMode.Request:
			text = \"需求\"
		OutpostDM.TradeMode.Supply:
			text = \"供给\"
"

[sub_resource type="GDScript" id="GDScript_3dleg"]
script/source = "extends VBoxContainer

signal mode_selected(mode: OutpostDM.TradeMode)

func _on_sto_pressed() -> void:
	mode_selected.emit(OutpostDM.TradeMode.Storage)

func _on_req_pressed() -> void:
	mode_selected.emit(OutpostDM.TradeMode.Request)

func _on_sup_pressed() -> void:
	mode_selected.emit(OutpostDM.TradeMode.Supply)
"

[sub_resource type="GDScript" id="GDScript_jqare"]
script/source = "extends GridContainer

signal item_selected(item: Item)

func list_items():
	clear()
	for item: Item in Global.items.values():
		if item.type == Item.ItemType.CURRENCY:
			continue
		var b := Button.new()
		b.icon_alignment = HORIZONTAL_ALIGNMENT_CENTER
		b.expand_icon = true
		b.icon = item.icon
		b.custom_minimum_size = Vector2i(48, 48)
		b.pressed.connect(_on_item_selected.bind(item))
		add_child(b)

func clear():
	for c in get_children():
		if c.text != 'ban':
			c.queue_free()

signal close_popuppanel
func _on_item_selected(item: Item):
	item_selected.emit(item)
	close_popuppanel.emit()

func _on_clear_item_pressed() -> void:
	item_selected.emit(null)
	close_popuppanel.emit()
"

[node name="PortView" type="VBoxContainer"]
offset_right = 384.0
offset_bottom = 64.0
script = ExtResource("1_wbnxq")
metadata/_edit_group_ = true

[node name="TitleContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ItemView" type="PanelContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer2/ItemView"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ItemTexture" type="TextureRect" parent="HBoxContainer2/ItemView/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "储量:"
label_settings = ExtResource("3_p0cf8")

[node name="PortStat" type="HBoxContainer" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelStorage" type="Label" parent="HBoxContainer2/PortStat"]
unique_name_in_owner = true
layout_mode = 2
text = "000"
label_settings = ExtResource("3_p0cf8")
script = SubResource("GDScript_4hd83")

[node name="Label3" type="Label" parent="HBoxContainer2/PortStat"]
visible = false
layout_mode = 2
text = "(+000)"
label_settings = SubResource("LabelSettings_irrqv")

[node name="ConfigView" type="VBoxContainer" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
script = SubResource("GDScript_4nfwf")

[node name="PortMode" type="Button" parent="HBoxContainer2/ConfigView"]
layout_mode = 2
size_flags_vertical = 3
text = "模式"
script = SubResource("GDScript_1q7ur")

[node name="AmountView" type="HBoxContainer" parent="HBoxContainer2/ConfigView"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2/ConfigView/AmountView"]
layout_mode = 2
text = "数量设置"

[node name="SettingAmount" type="LineEdit" parent="HBoxContainer2/ConfigView/AmountView"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "0"
alignment = 2
virtual_keyboard_type = 2
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="PopupModeSelector" type="PopupPanel" parent="."]
unique_name_in_owner = true
position = Vector2i(336, -16)
size = Vector2i(100, 106)

[node name="ModeSelector" type="VBoxContainer" parent="PopupModeSelector"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 102.0
script = SubResource("GDScript_3dleg")

[node name="Req" type="Button" parent="PopupModeSelector/ModeSelector"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_fayy5")
text = "right-to-bracket 需求"

[node name="Sto" type="Button" parent="PopupModeSelector/ModeSelector"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_fayy5")
text = "boxes-stacked 仓储"

[node name="Sup" type="Button" parent="PopupModeSelector/ModeSelector"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("5_fayy5")
text = "right-from-bracket 供给"

[node name="PopupItemSelector" type="PopupPanel" parent="."]
unique_name_in_owner = true
size = Vector2i(120, 100)

[node name="VBoxContainer" type="VBoxContainer" parent="PopupItemSelector"]
offset_left = 4.0
offset_top = 4.0
offset_right = 116.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="PopupItemSelector/VBoxContainer"]
layout_mode = 2
text = "选择一个物品："

[node name="ItemSelector" type="GridContainer" parent="PopupItemSelector/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 8
script = SubResource("GDScript_jqare")

[node name="ClearItem" type="Button" parent="PopupItemSelector/VBoxContainer/ItemSelector"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_fayy5")
text = "ban"
icon_alignment = 1
expand_icon = true

[node name="CloseButton" type="Button" parent="PopupItemSelector/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = " 关闭 "

[connection signal="gui_input" from="HBoxContainer2/ItemView" to="." method="_on_item_view_gui_input"]
[connection signal="pressed" from="HBoxContainer2/ConfigView/PortMode" to="." method="_on_config_button_pressed"]
[connection signal="text_submitted" from="HBoxContainer2/ConfigView/AmountView/SettingAmount" to="." method="_on_setting_amount_text_submitted"]
[connection signal="focus_exited" from="PopupModeSelector" to="PopupModeSelector" method="hide"]
[connection signal="mode_selected" from="PopupModeSelector/ModeSelector" to="." method="_on_mode_selector_mode_selected"]
[connection signal="pressed" from="PopupModeSelector/ModeSelector/Req" to="PopupModeSelector" method="hide"]
[connection signal="pressed" from="PopupModeSelector/ModeSelector/Req" to="PopupModeSelector/ModeSelector" method="_on_req_pressed"]
[connection signal="pressed" from="PopupModeSelector/ModeSelector/Sto" to="PopupModeSelector" method="hide"]
[connection signal="pressed" from="PopupModeSelector/ModeSelector/Sto" to="PopupModeSelector/ModeSelector" method="_on_sto_pressed"]
[connection signal="pressed" from="PopupModeSelector/ModeSelector/Sup" to="PopupModeSelector" method="hide"]
[connection signal="pressed" from="PopupModeSelector/ModeSelector/Sup" to="PopupModeSelector/ModeSelector" method="_on_sup_pressed"]
[connection signal="close_popuppanel" from="PopupItemSelector/VBoxContainer/ItemSelector" to="PopupItemSelector" method="hide"]
[connection signal="item_selected" from="PopupItemSelector/VBoxContainer/ItemSelector" to="." method="_on_item_selector_item_selected"]
[connection signal="pressed" from="PopupItemSelector/VBoxContainer/ItemSelector/ClearItem" to="PopupItemSelector/VBoxContainer/ItemSelector" method="_on_clear_item_pressed"]
[connection signal="pressed" from="PopupItemSelector/VBoxContainer/CloseButton" to="PopupItemSelector" method="hide"]
